<resources>
    <string name="app_name">Flashback Music</string>
    <string name="action_settings">Settings</string>
    <string name="download_button">Download</string>
    <string name="download_hint">Enter download link here:</string>
</resources>
